@@ -952,7 +952,7 @@ function get_msgcnt_str($start_msg, $end_msg, $num_msgs) {
         $result = sprintf(_("Viewing Messages: %s to %s (%s total)"),
                   '<b>'.$start_msg.'</b>', '<b>'.$end_msg.'</b>', $num_msgs);
     } else if ($start_msg == $end_msg) {
-        $result = sprintf(_("Viewing Message: %s (1 total)"), '<b>'.$start_msg.'</b>');
+        $result = sprintf(_("Viewing Message: %s (%s total)"), '<b>'.$start_msg.'</b>', $num_msgs);
     } else {
         $result = '<br>';
     }
@@ -1292,4 +1292,5 @@ function handleAsSent($mailbox) {
     return $handleAsSent_result;
 }
 
+// vim: et ts=4
 ?>
