@@ -26,6 +26,8 @@ Version 1.4.4 - CVS
   - Fix bug when Saving to Draft folder that contains special characters.
   - Fix RFC822 incompliant use of IP-address in Message-ID.
   - Uneditable address book entries no longer have checkboxes on addresses page 
+  - Fix that viewing the last page of a mailbox with one message always
+    claimed that the total of messages in that mailbox was 1.
 
 Version 1.4.3a - 2 June 2004
 ----------------------------
